--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 :root {
-    background-color: #1d1d1d;
-    color: #fff;
+    background-color: #09090b;
+    color: #f4f4f5;
 }
